--- a/JavaScriptLP/Exercicios/Ex01/index.html
+++ b/JavaScriptLP/Exercicios/Ex01/index.html
@@ -11,24 +11,30 @@
 <body>
     <section class="container">
         <h1>Tabela IMC</h1>
-        <h2>IMC</h2>
-        <p>
-            Menos do que 18,5 <br>
-            Entre 18,5 e 24,9 <br>
-            Entre 25 e 29,9 <br>
-            Entre 30 e 34,9 <br>
-            Entre 35 e 39,9 <br>
-            Mais do que 40
-        </p>
-        <h2>Resultado</h2>
-        <p>
-            Abaixo do peso <br>
-            Peso normal <br>
-            Sobrepeso <br>
-            Obesidade grau 1 <br>
-            Obesidade grau 2 <br>
-            Obesidade grau 3 <br>
-        </p>
+        <div class="imc-container">
+            <div class="coluna">
+                <h2>IMC</h2>
+                <p>
+                    Menos do que 18,5 <br>
+                    Entre 18,5 e 24,9 <br>
+                    Entre 25 e 29,9 <br>
+                    Entre 30 e 34,9 <br>
+                    Entre 35 e 39,9 <br>
+                    Mais do que 40
+                </p>
+            </div>
+            <div class="coluna">
+                <h2>Resultado</h2>
+                <p>
+                    Abaixo do peso <br>
+                    Peso normal <br>
+                    Sobrepeso <br>
+                    Obesidade grau 1 <br>
+                    Obesidade grau 2 <br>
+                    Obesidade grau 3 <br>
+                </p>
+            </div>
+        </div>
 
         <h1>Calcule seu IMC</h1>
 
