--- a/JavaScriptLP/Exercicios/Ex08/index.html
+++ b/JavaScriptLP/Exercicios/Ex08/index.html
@@ -4,35 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo HTML</title>
+    <title>Timer</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
     <section class="container">
-        <h1>Lorem ipsum dolor sit amet</h1>
+        <h1>Meu Timer</h1>
+        <div class="relogio">00:00:00</div>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Repellendus nisi explicabo saepe voluptatibus consequuntur et corporis
-            maxime quos, doloribus vitae voluptatum quisquam necessitatibus
-            pariatur veritatis exercitationem beatae officiis suscipit Ea!
+            <button class="iniciar">Iniciar</button>
+            <button class="pausar">Pausar</button>
+            <button class="zerar">Zerar</button>
         </p>
-
-        <form action="">
-            <label for="input-teste-1">Label teste #1</label>
-            <input type="text" id="input-teste-1">
-
-            <label for="input-teste-2">Label teste #2</label>
-            <input type="text" id="input-teste-2">
-
-            <label for="input-teste-3">Label teste #3</label>
-            <input type="text" id="input-teste-3">
-
-            <label for="input-teste-4">Label teste #4</label>
-            <input type="text" id="input-teste-4">
-
-            <button>Enviar</button>
-        </form>
     </section>
 
     <script src="assets/js/main.js"></script>
