--- a/Projetos/CalculadoraIMC/index.html
+++ b/Projetos/CalculadoraIMC/index.html
@@ -51,7 +51,7 @@
         <div id="resultado"></div>
     </section>
 
-    <script src="assets/js/main.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
