--- a/JavaScriptFunctions/Exercicios/Ex01/index.html
+++ b/JavaScriptFunctions/Exercicios/Ex01/index.html
@@ -4,35 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo HTML</title>
+    <title>Calculadora</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
     <section class="container">
-        <h1>Lorem ipsum dolor sit amet</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Repellendus nisi explicabo saepe voluptatibus consequuntur et corporis
-            maxime quos, doloribus vitae voluptatum quisquam necessitatibus
-            pariatur veritatis exercitationem beatae officiis suscipit Ea!
-        </p>
+        <div class="calculadora">
+            <h1>Calculadora</h1>
+            <input type="text" class="visor" readonly>
+            <div class="botoes">
+                <button class="btn btn-clear">C</button>
+                <button class="">(</button>
+                <button class="">)</button>
+                <button class="btn btn-num">/</button>
 
-        <form action="">
-            <label for="input-teste-1">Label teste #1</label>
-            <input type="text" id="input-teste-1">
+                <button class="btn btn-num">7</button>
+                <button class="btn btn-num">8</button>
+                <button class="btn btn-num">9</button>
+                <button class="btn btn-num">*</button>
 
-            <label for="input-teste-2">Label teste #2</label>
-            <input type="text" id="input-teste-2">
+                <button class="btn btn-num">4</button>
+                <button class="btn btn-num">5</button>
+                <button class="btn btn-num">6</button>
+                <button class="btn btn-num">-</button>
 
-            <label for="input-teste-3">Label teste #3</label>
-            <input type="text" id="input-teste-3">
+                <button class="btn btn-num">1</button>
+                <button class="btn btn-num">2</button>
+                <button class="btn btn-num">3</button>
+                <button class="btn btn-num">+</button>
 
-            <label for="input-teste-4">Label teste #4</label>
-            <input type="text" id="input-teste-4">
-
-            <button>Enviar</button>
-        </form>
+                <button class="btn btn-num">.</button>
+                <button class="btn btn-num">0</button>
+                <button class="btn btn-del">&laquo;</button>
+                <button class="btn btn-eq">=</button>
+            </div>
+        </div>
     </section>
 
     <script src="assets/js/main.js"></script>
