--- a/JavaScriptFunctions/Exercicios/Ex01/index.html
+++ b/JavaScriptFunctions/Exercicios/Ex01/index.html
@@ -15,8 +15,8 @@
             <input type="text" class="visor" readonly>
             <div class="botoes">
                 <button class="btn btn-clear">C</button>
-                <button class="">(</button>
-                <button class="">)</button>
+                <button class="btn btn-num">(</button>
+                <button class="btn btn-num">)</button>
                 <button class="btn btn-num">/</button>
 
                 <button class="btn btn-num">7</button>
